test/analyzer/input_programs/invalid_programs/program31.tea
x := class:
  init: () -> 'hello'
  z:8
end

f := () -> [1,2,3,4,5]

y := new x()
#valid
y.f()[3].a
y.z+7

#invalid since z is not an object
z := 5
z.3